send response in form of JSON

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="row">
         <p>Try these links:<br>
-        <a href="http://fcc-url-shortener-n0bl3.herokuapp.com/new/www.google.com">http://fcc-url-shortener-n0bl3.herokuapp.com/new/www.google.com</a><br>
+        <a href="http://fcc-url-shortener-n0bl3.herokuapp.com/new/http://www.google.com">http://fcc-url-shortener-n0bl3.herokuapp.com/new/http://www.google.com</a><br>
         <a href="http://fcc-url-shortener-n0bl3.herokuapp.com/new/http://www.freecodecamp.com/">http://fcc-url-shortener-n0bl3.herokuapp.com/new/http://www.freecodecamp.com/</a><br>
         or try yours directly in the URL:<br>
         http://fcc-url-shortener-n0bl3.herokuapp.com/new/URL
